--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "marked": "^14.1.3",
     "marked-gfm-heading-id": "^4.1.0",
     "marked-highlight": "^2.2.0",
+    "pinia": "^2.2.4",
     "qrcode": "^1.5.4",
     "roughjs": "^4.6.6",
     "vue": "^3.5.12",
