--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@unocss/reset": "^0.63.6",
     "@vueuse/core": "^11.2.0",
     "@vueuse/router": "^11.1.0",
+    "axios": "^1.7.7",
     "cropperjs": "^1.6.2",
     "dayjs": "^1.11.13",
     "github-markdown-css": "^5.7.0",
